--- a/css/styles-4.css
+++ b/css/styles-4.css
@@ -13,6 +13,15 @@ TABLE OF CONTENT
 1. Headings
 2. Header
 3. Hero
+4. Top Product
+5. Top Hero
+6. Blog
+7. Stroe
+9. Brends
+10. Feedback
+11. News
+12. Video
+13. Footer
 ==============================================
 [END] TABLE OF CONTENT
 ==============================================
@@ -24,6 +33,350 @@ TABLE OF CONTENT
 @import url('https://fonts.googleapis.com/css?family=Red+Hat+Display:400,400i,500,500i,700,700i,900,900i&display=swap');
 /*Default Styles*/
 @import url("default.css");
+
 /*-----------------------------------------
 1. Headings
+-------------------------------------------*/
+.product-title{
+  position: relative;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 18px;
+  letter-spacing: 0.02em;
+  color: #1192EE;
+}
+.product-title:after{
+  content: "";
+  width: 68px;
+  height: 1px;
+  background-color: #4F4E4E;
+  position: absolute;
+  left: 0;
+  top: -15px;
+}
+.product-subtitle{
+  font-style: normal;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 31px;
+  letter-spacing: 0.02em;
+  color: #524949;
+}
+.product-name{
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 27px;
+  letter-spacing: 0.05em;
+  color: rgba(46, 53, 56, 0.92);
+}
+.product-info{
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 21px;
+  letter-spacing: 0.05em;
+  color: rgba(46, 53, 56, 0.92);
+  margin-bottom: 0;
+}
+.h-4-btn-1{
+  padding: 15px 25px;
+  background: #FFE8E5;
+  box-shadow: -4px -4px 8px rgba(255, 255, 255, 0.25), 4px 4px 8px rgba(0, 0, 0, 0.09);
+  border-radius: 50px;
+  width: 165px;
+  height: 47px;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 16px;
+  letter-spacing: 0.04em;
+  color: #1192EE;
+  float: right;
+}
+.h-4-btn-2{
+  padding: 15px 25px;
+  border: 1px solid #1192EE;
+  border-radius: 50px;
+  width: 165px;
+  height: 47px;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 16px;
+  letter-spacing: 0.04em;
+  color: #1192EE;
+  float: right;
+  text-align: center;
+  margin-top: 65px;
+}
+/*-----------------------------------------
+2. Header
+-------------------------------------------*/
+/*-----------------------------------------
+3. Hero
+-------------------------------------------*/
+
+
+/*-----------------------------------------
+4. Top Product
+-------------------------------------------*/
+#top-product{
+  padding: 100px 0;
+}
+.product-rev{
+  width: 100%;
+}
+.products-view {
+  margin-top: 100px;
+  display: flex;
+  align-content: center;
+  justify-content: space-around;
+}
+.product-item-1 img, .product-item-3 img{
+  margin-top: 10px;
+}
+.product-item-2{
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.basket{
+  position: relative;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color: #1192EE;
+  color: #fff;
+  text-align: center;
+  margin-top: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.basket:before{
+  content: "";
+  width: 20px;
+  height: 2px;
+  background-color: #1192EE;
+  position: absolute;
+  left: 5px;
+  top: -10px;
+}
+.basket i{
+  margin-top: 5px;
+}
+@media screen and (max-width: 768px) {
+  #top-product{
+    text-align: center;
+  }
+  .product-title:after {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  .product-rev{
+    width: auto;
+  }
+}
+/*-----------------------------------------
+5. Top Hero
+-------------------------------------------*/
+
+#top-hero{
+  padding: 270px 0 0px 0px;
+  background-image: url("../img/content/home-4-vector.png");
+  background-position: top;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.top-hero-title{
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 18px;
+  letter-spacing: 0.02em;
+  color: #CD9591;
+}
+.top-hero-subtitle{
+  font-style: normal;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 31px;
+  letter-spacing: 0.02em;
+  color: #524949;
+}
+.top-hero-infobox{
+  display: flex;
+}
+.top-hero-infobox p{
+  margin-left: 30px;
+  display: flex;
+  align-items: center;
+}
+.btn-box{
+  margin-top: 50px;
+}
+@media screen and (max-width: 992px) {
+  .top-bg-media{
+      display: flex;
+      align-items: center;
+  }
+  #top-hero {
+    padding: 190px 0 0px 0px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .top-bg-media{
+    justify-content: center;
+  }
+  .top-bg-media img{
+    width: 50%;
+  }
+  #top-hero {
+    padding: 80px 0 0px 0px;
+    background-position: inherit;
+  }
+}
+/*-----------------------------------------
+6. Blog
+-------------------------------------------*/
+#blog{
+  padding: 120px 0 40px 0;
+}
+.blog-items-pic{
+  text-align: center;
+}
+@media screen and (max-width: 767px) {
+  #blog{
+    padding: 100px 0 20px 0;
+    text-align: center;
+  }
+  .blog-items-pic{
+    margin-top: 50px;
+  }
+}
+/*-----------------------------------------
+7. Stroe
+-------------------------------------------*/
+#store{
+  background: #F9FAFF;
+  padding: 95px 0 100px 65px;
+}
+.img-w{
+  width: 100%;
+}
+.right-boxs{
+  margin-bottom: 30px;
+}
+.box-item {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+.store-overley{
+  padding: 20px 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(17, 146, 238, 0.9);
+  position: absolute;
+  left: 0;
+  top: 0;
+  opacity: 0;
+  transition: all 0.5s;
+  transform: scale(0.3);
+  text-align: center;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: space-around;
+}
+.box-item:hover .store-overley{
+  opacity: 1;
+  transition: all 0.5s;
+  transform: scale(1);
+}
+.store-overley h3{
+  font-style: normal;
+  font-weight: 900;
+  font-size: 14px;
+  line-height: 19px;
+  letter-spacing: 0.05em;
+  color: #FFFFFF;
+}
+.price{
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14.35px;
+  line-height: 19px;
+  letter-spacing: 0.05em;
+  color: #FFFFFF;
+  position: relative;
+}
+.price::after{
+  content: "";
+  position: absolute;
+  left: 50%;
+  top: 40px;
+  transform: translateX(-50%);
+  width: 39px;
+  height: 2px;
+  background-color: #fff;
+}
+.store-overley a{
+  padding: 5px 10px;
+  width: 67px;
+  height: 21px;
+  background: #FFFFFF;
+  border-radius: 50px;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 8px;
+  line-height: 11px;
+  letter-spacing: 0.05em;
+  color: #000000;
+}
+@media screen and (max-width: 767px) {
+  #store {
+    text-align: center;
+    padding: 95px 0 30px 0;
+  }
+  .btn-box a{
+    float: none;
+    margin-top: 50px;
+  }
+}
+/*-----------------------------------------
+8. Services
+-------------------------------------------*/
+
+
+
+/*-----------------------------------------
+9. Brends
+-------------------------------------------*/
+
+
+
+/*-----------------------------------------
+10. Feedback
+-------------------------------------------*/
+
+
+
+/*-----------------------------------------
+11. News
+-------------------------------------------*/
+
+
+
+/*-----------------------------------------
+12. Video
+-------------------------------------------*/
+
+
+
+/*-----------------------------------------
+13. Footer
 -------------------------------------------*/
