--- a/css/styles-4.css
+++ b/css/styles-4.css
@@ -114,6 +114,172 @@ TABLE OF CONTENT
 /*-----------------------------------------
 2. Header
 -------------------------------------------*/
+header {
+  transition: all 1s;
+  width: 100%;
+  z-index: 10;
+}
+
+nav {
+  transition: all 0.5s;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background-color: transparent;
+  height: 50px;
+}
+.logo {
+    width: 60px;
+}
+.nav-links {
+  display: flex;
+  justify-content: space-around;
+  width: 60%;
+}
+.active-nav{
+  font-weight: 900 !important;
+  color: rgba(0, 0, 0, 0.6);
+  text-transform: uppercase;
+}
+.shop-icon{
+  display: flex;
+  justify-content: space-around;
+  width: 10%;
+}
+.cart-count{
+  position: relative;
+}
+.countcart{
+  width: 12px;
+  height: 12px;
+  background-color: #1192EE;
+  border-radius: 50%;
+  color: #fff;
+  font-weight: 900;
+  font-size: 6px;
+  letter-spacing: 0.04em;
+  position: absolute;
+  left: -5px;
+  top: 12px;
+}
+.countcart span{
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  top: 50%;
+}
+@media screen and (max-width: 1300px) {
+  .nav-links {
+    width: 60%;
+  }
+}
+
+.nav-links a {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 19px;
+  letter-spacing: 0.055em;
+  color: rgba(0, 0, 0, 0.6);
+}
+
+.burger {
+  display: none;
+  cursor: pointer;
+}
+
+.burger div {
+  width: 25px;
+  height: 2px;
+  margin: 5px;
+  background-color: #000;
+  transition: all 0.3s ease;
+}
+
+@media screen and (max-width: 768px) {
+  .nav-links {
+    position: absolute;
+    right: 0;
+    top: 50px;
+    height: calc(100vh - 50px);
+    height: -moz-calc(100vh - 50px);
+    height: -webkit-calc(100vh - 50px);
+    width: 40%;
+    background-color: transparent;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    transform: translateX(100%);
+    transition: transform 0.5s ease-in;
+  }
+
+  .nav-links li {
+    opacity: 0;
+  }
+
+  .burger {
+    display: block;
+  }
+
+  nav {
+    justify-content: space-between;
+  }
+}
+
+.nav-active {
+  transform: translateX(0%);
+  background-color: #fff;
+  z-index: 10;
+}
+
+.fixedColor div nav {
+  height: 80px;
+  transition: all 0.5s;
+}
+
+.fixedColor {
+  transition: all 1s;
+  background-color: rgba(0, 0, 0, 0.90);
+}
+
+@keyframes navLinkFade {
+  from {
+    opacity: 0;
+    transform: translateX(50px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateX(0px);
+  }
+}
+
+.toggle .line1 {
+  transform: rotate(-45deg) translate(-5px, 6px);
+}
+
+.toggle .line2 {
+  opacity: 0;
+}
+
+.toggle .line3 {
+  transform: rotate(45deg) translate(-5px, -6px);
+}
+
+.linkbtn {
+  border: 1px solid #E5E5E5;
+  border-radius: 5px;
+  padding: 8px 20px;
+}
+
+.fixed {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background-color: #fff;
+  box-shadow: 4px 4px 20px rgba(205, 192, 192, 1);
+}
+
 /*-----------------------------------------
 3. Hero
 -------------------------------------------*/
